[project]
name = "strapi-client"
version = "3.0.3"
description = "Interact with Strapi from Python using the REST API"
authors = [
    { name = "Pavel Roslovets", email = "p.v.roslovets@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["strapi", "cms", "api", "rest"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
#packages = [{ include = "strapi_client", from = "src" }]

dependencies = [
    "httpx>=0.23.1",
    "pydantic>=2.0"
]

[dependency-groups]
dev = [
    "mypy==1.14.1",
    "python-semantic-release==9.21.0",
    "lazydocs==0.4.8",
    "pydocstyle==6.3.0",
]

[project.urls]
Homepage = "https://github.com/Roslovets-Inc/strapi-client"
Repository = "https://github.com/Roslovets-Inc/strapi-client"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"pkgname" = ["py.typed"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.semantic_release]
remove_dist = "false"
branch = "main"
version_toml = ["pyproject.toml:project.version"]
upload_to_release = "true"
upload_to_pypi = "true"
