[project]
name = "strapi-client"
version = "4.1.4"
description = "Interact with Strapi from Python using the REST API"
authors = [
    { name = "Pavel Roslovets", email = "p.v.roslovets@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["strapi", "cms", "api", "rest"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "httpx>=0.23.1",
    "pydantic>=2.0",
    "qs-codec>=1.1.5",
]

[dependency-groups]
dev = [
    "mypy==1.17.0",
    "python-semantic-release==10.2.0",
    "lazydocs==0.4.8",
    "pydocstyle==6.3.0",
    "mkdocs==1.6.1",
    "mkdocs-awesome-nav==3.1.2",
    "pytest==8.4.1",
]
[project.urls]
Homepage = "https://github.com/Roslovets-Inc/strapi-client"
Repository = "https://github.com/Roslovets-Inc/strapi-client"
Documentation = "https://roslovets-inc.github.io/strapi-client/"
Issues = "https://github.com/Roslovets-Inc/strapi-client/issues"
Changelog = "https://github.com/Roslovets-Inc/strapi-client/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"pkgname" = ["py.typed"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.semantic_release]
remove_dist = "false"
branch = "main"
version_toml = ["pyproject.toml:project.version"]
upload_to_release = "true"
upload_to_pypi = "true"
